--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,3 +16,7 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+
+# Custom Permalinks Configuration
+permalinks:
+  blog: "/blog/:slug/index.html"
